[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "betsy_ros"
description = "In this time of revolution between the regimes of ROS 1 and ROS 2, Betsy ROS creates a unified banner."
readme = "README.md"
authors = [
  { name = "David V. Lu!!", email = "davidvlu@gmail.com" },
]
maintainers = [
  { name = "David V. Lu!!", email = "davidvlu@gmail.com" },
]

requires-python = ">=3.8"

dynamic = ["version"]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/MetroRobots/betsy_ros"
"Bug Tracker" = "https://github.com/MetroRobots/betsy_ros/issues"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/betsy_ros/_version.py"
